js/src/tests/test262/built-ins/Promise/reject/S25.4.4.4_A3.1_T1.js
function
ZeroArgConstructor
(
)
{
}
assert
.
throws
(
TypeError
function
(
)
{
Promise
.
reject
.
call
(
ZeroArgConstructor
4
)
;
}
)
;
reportCompare
(
0
0
)
;
